--- a/style.css
+++ b/style.css
@@ -7,22 +7,24 @@ body {
 
 #frame {
     background-color: rgb(150, 150, 150);
-    border-radius: 1vw;
+    border-radius: max(1vw, 4px);
     padding: 0.5vh;
 }
 
 #display {
     display: flex;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px outset black;
     background-color: white;
-    border-radius: 1vw;
+    border-radius: max(1vw, 2px);
     justify-content: flex-end;
     align-items: center;
     width: 26.5vw;
     height: 6vw;
     min-height: 24px;
     min-width: 115px;
+    padding-right: 6px;
     margin: 2px;
+    font-size: max(4vw, 16px);
 }
 
 .row {
@@ -39,7 +41,8 @@ body {
     min-height: 24px;
     min-width: 115px;
     margin: 2px;
-    border-radius: 1vw;
+    border-radius: max(1vw, 4px);
+    font-size: max(3vw, 12px);
 }
 
 .keypad {
@@ -48,5 +51,6 @@ body {
     min-width: 25px;
     height: 6.25vw;
     min-height: 25px;
-    border-radius: 1vw;
+    border-radius: max(1vw, 4px);
+    font-size: max(3vw, 12px);
 }
